<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="retry">Обновить</string>
    <string name="empty_placeholder">Ничего не нашлось</string>
    <string name="error_placeholder_title">Проблемы со связью</string>
    <string name="error_placeholder_subtitle">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>
    <string name="share_message">Привет! Ссылка на курс по Android-разработке: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">yourEmail@ya.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agree_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
</resources>