<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        style="@style/TitleText"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp">


        <Button
            android:id="@+id/btnSearch"
            style="@style/MainMenuButton"
            android:text="@string/search"
            app:icon="@drawable/lupa"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnMedia"
            style="@style/MainMenuButton"
            android:text="@string/media"
            app:icon="@drawable/nota"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSetting"
            style="@style/MainMenuButton"
            android:text="@string/setting"
            app:icon="@drawable/nastroika"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</LinearLayout>