<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface">

    <!-- ШАПКА -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:src="@drawable/btnback"
            app:tint="?attr/colorOnSurface"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/search_title_text_size"
            android:layout_marginStart="8dp"
            style="@style/TitleText"/>

    </LinearLayout>
    

    <!-- ПОИСК -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_background"
            android:hint="@string/search_hint"
            android:textColorHint="@color/search_hint"
            android:textColor="@color/search_text"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            android:drawableStart="@drawable/lupa"
            android:drawableTint="@color/search_hint"
            android:drawablePadding="8dp"
            android:paddingStart="12dp"/>
        
        <ImageView
            android:id="@+id/btnClearSearch"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/x_clear"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:visibility="gone"
            app:tint="@color/search_hint" />
    </FrameLayout>

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1">

       <!-- СПИСОК ТРЕКОВ -->
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvTracks"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="16dp"
           android:scrollbars="vertical" />

       <!--ИСТОРИЯ-->
       <LinearLayout
        android:id="@+id/historyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/youSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_search"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnClearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_history"
            android:textSize="14sp"
            android:backgroundTint="@color/retry_background"
            android:textColor="?attr/colorSurface"
            android:layout_marginTop="24dp"
            style="@style/RetryButton" />
    </LinearLayout>



    <!-- Плейсхолдер (нет результатов) -->
    <LinearLayout
        android:id="@+id/emptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="16dp">
        
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_empty_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_placeholder"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <!-- Плейсхолдер (ошибка сервера) -->
    <LinearLayout
        android:id="@+id/errorPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_error_placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_placeholder_title"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_placeholder_subtitle"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxLines="2"/>

        <Button
            android:id="@+id/retryBtn"
            android:text="@string/retry"
            android:backgroundTint="@color/retry_background"
            android:textColor="?attr/colorSurface"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            style="@style/RetryButton" />
    </LinearLayout>
    </FrameLayout>


</LinearLayout>