<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <!--кнопка НАЗАД -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/btnback"
            app:tint="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp" />

        <!--ОБЛОЖКА-->
        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintDimensionRatio="1:1" />

        <!-- 3. НАЗВАНИЕ ТРЕКА -->
        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:textSize="22sp"
            android:textColor="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCover" />

        <!-- 4. ИСПОЛНИТЕЛЬ -->
        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTrackName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <!-- КНОПКА ДОБАВИТЬ (слева от PLAY) -->
        <ImageView
            android:id="@+id/btnAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/btnPlay"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistName"
            android:layout_marginTop="40dp" />

        <!-- КНОПКА PLAY (по центру) -->
        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@drawable/ic_play"
            app:tint="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/tvArtistName"
            android:layout_marginTop="24dp" />

        <!-- КНОПКА ИЗБРАННОЕ (справа от PLAY) -->
        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintStart_toEndOf="@id/btnPlay"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistName"
            android:layout_marginTop="40dp" />

        <!--Текущее время -->
        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:30"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnPlay"
            android:layout_marginTop="8dp" />

        <!-- ДЛИТЕЛЬНОСТЬ -->
        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="13sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentTime"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/tvDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDuration" />

        <!-- АЛЬБОМ -->
        <TextView
            android:id="@+id/tvAlbumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="13sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvDuration"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvAlbumValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginStart="8dp"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/tvAlbumLabel"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAlbumLabel" />

        <!-- ГОД -->
        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="13sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAlbumLabel"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvReleaseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintBaseline_toBaselineOf="@id/tvReleaseDate" />

        <!-- ЖАНР -->
        <TextView
            android:id="@+id/tvGenreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="13sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvGenreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGenreName" />

        <!-- СТРАНА -->
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="13sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvGenreName"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/tvCountryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginStart="8dp"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/tvCountry"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCountry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>